force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>