force-app/main/default/objects/Competitor__c/fields/Customer_Core_Business__c.field-meta.xml
<CustomField>
    <fullName>Customer_Core_Business__c</fullName>
    <label>Customer Core Business</label>
    <type>TextArea</type>
</CustomField>