force-app/main/default/objects/Competitor__c/fields/Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Type__c</fullName>
    <label>Hospital Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hospital_Type</valueSetName>
    </valueSet>
</CustomField>