force-app/main/default/objects/Competitor__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization_Type</valueSetName>
    </valueSet>
</CustomField>