force-app/main/default/objects/Competitor__c/fields/Parent_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Parent_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>