force-app/main/default/objects/Competitor__c/fields/Registration_Address__c.field-meta.xml
<CustomField>
    <fullName>Registration_Address__c</fullName>
    <label>Registration Address</label>
    <type>Address</type>
</CustomField>