force-app/main/default/objects/Competitor__c/validationRules/No_letters_in_phone_and_mobile_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>No_letters_in_phone_and_mobile_fields</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX( Phone__c , &quot;(?=.*[a-zA-Z]).*$&quot;)</errorConditionFormula>
    <errorMessage>Do not use letters in Phone field.</errorMessage>
</ValidationRule>