force-app/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Organization_Type__c</columns>
    <columns>Customer_Core_Business__c</columns>
    <columns>Registration_Address__CountryCode__s</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>